20aug2017 part 1 nearly done

--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -537,7 +537,7 @@
    ],
    "source": [
     "from asl_utils import test_features_tryit\n",
-    "# TODO add df columns for 'grnd-rx', 'grnd-ly', 'grnd-lx' representing differences between hand and nose locations\n",
+    "# DONE: add df columns for 'grnd-rx', 'grnd-ly', 'grnd-lx' representing differences between hand and nose locations\n",
     "asl.df['grnd-rx'] = asl.df['right-x'] - asl.df['nose-x']\n",
     "asl.df['grnd-ly'] = asl.df['left-y'] - asl.df['nose-y']\n",
     "asl.df['grnd-lx'] = asl.df['left-x'] - asl.df['nose-x']\n",
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1163,19 +1163,22 @@
    },
    "outputs": [],
    "source": [
-    "# TODO add features for normalized by speaker values of left, right, x, y\n",
+    "# DONE: add features for normalized by speaker values of left, right, x, y\n",
     "# Name these 'norm-rx', 'norm-ry', 'norm-lx', and 'norm-ly'\n",
     "# using Z-score scaling (X-Xmean)/Xstd\n",
-    "asl.df['right-x-mean']= asl.df['speaker'].map(df_means['right-x'])\n",
-    "asl.df['left-y-mean']= asl.df['speaker'].map(df_means['left-y'])\n",
-    "asl.df['right-y-mean']= asl.df['speaker'].map(df_means['right-y'])\n",
+    "features_norm = ['norm-rx', 'norm-ry', 'norm-lx','norm-ly']\n",
+    "features_raw = ['right-x', 'right-y', 'left-x','left-y']\n",
     "\n",
-    "features_norm = ['norm-rx', 'norm-ry', 'norm-lx','norm-ly']"
+    "for norm, raw_name in zip(features_norm, features_raw):\n",
+    "    asl.df[raw_name+'-mean']= asl.df['speaker'].map(df_means[raw_name])\n",
+    "    asl.df[norm+'-std']= asl.df['speaker'].map(df_std[raw_name])\n",
+    "    asl.df[norm]= (asl.df[raw_name]-asl.df[raw_name+'-mean'])/asl.df[norm+'-std']\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1183,16 +1186,19 @@
    },
    "outputs": [],
    "source": [
-    "# TODO add features for polar coordinate values where the nose is the origin\n",
+    "# DONE: add features for polar coordinate values where the nose is the origin\n",
     "# Name these 'polar-rr', 'polar-rtheta', 'polar-lr', and 'polar-ltheta'\n",
     "# Note that 'polar-rr' and 'polar-rtheta' refer to the radius and angle\n",
+    "features_polar = ['polar-rr', 'polar-rtheta', 'polar-lr', 'polar-ltheta']\n",
     "\n",
-    "features_polar = ['polar-rr', 'polar-rtheta', 'polar-lr', 'polar-ltheta']"
+    "for side in ['l', 'r']:\n",
+    "    asl.df['polar-'+side+'r'] = np.hypot(asl.df['grnd-'+side+'x'],asl.df['grnd-'+side+'y'])\n",
+    "    asl.df['polar-'+side+'theta'] = np.arctan2(asl.df['grnd-'+side+'x'],asl.df['grnd-'+side+'y'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1200,10 +1206,15 @@
    },
    "outputs": [],
    "source": [
-    "# TODO add features for left, right, x, y differences by one time step, i.e. the \"delta\" values discussed in the lecture\n",
+    "# DONE: add features for left, right, x, y differences by one time step, i.e. the \"delta\" values discussed in the lecture\n",
     "# Name these 'delta-rx', 'delta-ry', 'delta-lx', and 'delta-ly'\n",
     "\n",
-    "features_delta = ['delta-rx', 'delta-ry', 'delta-lx', 'delta-ly']"
+    "features_delta = ['delta-rx', 'delta-ry', 'delta-lx', 'delta-ly']\n",
+    "features_raw = ['right-x', 'right-y', 'left-x','left-y']\n",
+    "\n",
+    "for delta, raw_name in zip(features_delta, features_raw):\n",
+    "    asl.df[delta] = asl.df[raw_name].diff().fillna(0)\n",
+    "    "
    ]
   },
   {
@@ -1249,13 +1260,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.018s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "# import numpy as np\n",
@@ -1269,16 +1302,17 @@
     "    def test_features_norm(self):\n",
     "        sample = (asl.df.ix[98, 1][features_norm]).tolist()\n",
     "        np.testing.assert_almost_equal(sample, [ 1.153,  1.663, -0.891,  0.742], 3)\n",
-    "\n",
+    "    \n",
     "    def test_features_polar(self):\n",
     "        sample = (asl.df.ix[98,1][features_polar]).tolist()\n",
     "        np.testing.assert_almost_equal(sample, [113.3578, 0.0794, 119.603, -0.1005], 3)\n",
-    "\n",
+    "    \n",
     "    def test_features_delta(self):\n",
     "        sample = (asl.df.ix[98, 0][features_delta]).tolist()\n",
     "        self.assertEqual(sample, [0, 0, 0, 0])\n",
     "        sample = (asl.df.ix[98, 18][features_delta]).tolist()\n",
     "        self.assertTrue(sample in [[-16, -5, -2, 4], [-14, -9, 0, 0]], \"Sample value found was {}\".format(sample))\n",
+    "    \n",
     "                         \n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestFeatures())\n",
     "unittest.TextTestRunner().run(suite)"
