--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -1117,7 +1117,7 @@
    ],
    "source": [
     "from asl_utils import test_std_tryit\n",
-    "# TODO Create a dataframe named `df_std` with standard deviations grouped by speaker\n",
+    "# DONE: Create a dataframe named `df_std` with standard deviations grouped by speaker\n",
     "df_std = asl.df.groupby('speaker').std()\n",
     "\n",
     "# test the code\n",
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1734,27 +1734,17 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Cannot have number of splits n_splits=3 greater than the number of samples: 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-37-b75a125c4b8e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtimeit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdefault_timer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     model = SelectorCV(sequences, Xlengths, word, \n\u001b[1;32m---> 12\u001b[1;33m                     min_n_components=2, max_n_components=15, random_state = 14).select()\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtimeit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdefault_timer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\Nick admin\\Desktop\\Udacity\\AIND\\AIND-Recognizer\\my_model_selectors.py\u001b[0m in \u001b[0;36mselect\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    111\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mnum_states\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin_n_components\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_n_components\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    112\u001b[0m             \u001b[0mlogL_vec\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# stores log likelihoods for each cv fold\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 113\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mcv_train_idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv_test_idx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msplit_method\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msequences\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    114\u001b[0m                 \u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlengths_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcombine_sequences\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcv_train_idx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msequences\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m                 hmm_model = GaussianHMM(n_components=num_states, covariance_type=\"diag\", n_iter=1000,\n",
-      "\u001b[1;32mC:\\Program Files\\Anaconda3\\envs\\aind\\lib\\site-packages\\sklearn\\model_selection\\_split.py\u001b[0m in \u001b[0;36msplit\u001b[1;34m(self, X, y, groups)\u001b[0m\n\u001b[0;32m    318\u001b[0m                 (\"Cannot have number of splits n_splits={0} greater\"\n\u001b[0;32m    319\u001b[0m                  \u001b[1;34m\" than the number of samples: {1}.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 320\u001b[1;33m                                                              n_samples))\n\u001b[0m\u001b[0;32m    321\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    322\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_BaseKFold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgroups\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Cannot have number of splits n_splits=3 greater than the number of samples: 2."
+      "  %reload_ext autoreload\n",
+      "Training complete for FISH with 11 states with time 0.4734800463775173 seconds\n",
+      "Training complete for BOOK with 6 states with time 3.601437632460147 seconds\n",
+      "Training complete for VEGETABLE with 2 states with time 1.387217357463669 seconds\n",
+      "Training complete for FUTURE with 2 states with time 3.3935063575627282 seconds\n",
+      "Training complete for JOHN with 12 states with time 36.054979664157145 seconds\n"
      ]
     }
    ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "# TODO: Implement SelectorCV in my_model_selector.py\n",
+    "# Done: Implement SelectorCV in my_model_selector.py\n",
     "from my_model_selectors import SelectorCV\n",
     "\n",
     "training = asl.build_training(features_ground)  # Experiment here with different feature sets defined in part 1\n",
@@ -1773,15 +1763,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Training complete for FISH with 5 states with time 0.439217065111734 seconds\n",
+      "Training complete for BOOK with 8 states with time 1.9190441857790574 seconds\n",
+      "Training complete for VEGETABLE with 9 states with time 0.7780621788697317 seconds\n",
+      "Training complete for FUTURE with 9 states with time 2.0521123004727997 seconds\n",
+      "Training complete for JOHN with 13 states with time 18.252602968073916 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Implement SelectorBIC in module my_model_selectors.py\n",
+    "# Done: Implement SelectorBIC in module my_model_selectors.py\n",
     "from my_model_selectors import SelectorBIC\n",
     "\n",
     "training = asl.build_training(features_ground)  # Experiment here with different feature sets defined in part 1\n",
@@ -1800,15 +1804,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Training complete for FISH with 3 states with time 0.794346260430757 seconds\n",
+      "Training complete for BOOK with 15 states with time 3.691989910090342 seconds\n",
+      "Training complete for VEGETABLE with 15 states with time 2.691583785810508 seconds\n",
+      "Training complete for FUTURE with 15 states with time 3.8012017801520415 seconds\n",
+      "Training complete for JOHN with 15 states with time 19.02811936417129 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Implement SelectorDIC in module my_model_selectors.py\n",
+    "# Done: Implement SelectorDIC in module my_model_selectors.py\n",
     "from my_model_selectors import SelectorDIC\n",
     "\n",
     "training = asl.build_training(features_ground)  # Experiment here with different feature sets defined in part 1\n",
@@ -1851,13 +1869,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 44.986s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from asl_test_model_selectors import TestSelectors\n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestSelectors())\n",
@@ -1883,13 +1923,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Number of word models returned = 112\n"
+     ]
+    }
+   ],
    "source": [
     "# autoreload for automatically reloading changes made in my_model_selectors and my_recognizer\n",
     "%load_ext autoreload\n",
@@ -1928,13 +1978,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of test set items: 178\n",
+      "Number of test set sentences: 40\n"
+     ]
+    }
+   ],
    "source": [
     "test_set = asl.build_test(features_ground)\n",
     "print(\"Number of test set items: {}\".format(test_set.num_items))\n",
